# device_soc_oniro

./: .gitattributes
hybris_generic/: BUILD.gn  bundle.json
hybris_generic/hardware/camera/: BUILD.gn
hybris_generic/hardware/camera/include/: hybris_camera_log.h
hybris_generic/hardware/camera/include/droidmedia/: droidmedia.h  droidmediacamera.h  droidmediacodec.h
hybris_generic/hardware/camera/src/camera_device/: hybris_camera_device_vdi_impl.cpp  hybris_camera_device_vdi_impl.h  hybris_stream_operator_vdi_impl.cpp  hybris_stream_operator_vdi_impl.h
hybris_generic/hardware/camera/src/camera_host/: hybris_camera_ability.cpp  hybris_camera_ability.h  hybris_camera_host_vdi_impl.cpp  hybris_camera_host_vdi_impl.h
hybris_generic/hardware/camera/src/droidmedia/: droidmedia_loader.cpp  droidmedia_loader.h
hybris_generic/hardware/camera/src/hidl/: hw_binder_abi.h  hw_binder_client.cpp  hw_binder_client.h  hw_binder_server.cpp  hw_binder_server.h  hw_camera_device.cpp  hw_camera_device.h  hw_camera_device_callback.cpp  hw_camera_device_callback.h  hw_camera_device_session.cpp  hw_camera_device_session.h  hw_camera_provider.cpp  hw_camera_provider.h  hw_parcel.cpp  hw_parcel.h  hw_service_manager.cpp  hw_service_manager.h
hybris_generic/hardware/camera/tools/: binder_smoke.cpp  camera_hidl_smoke.cpp  droidmedia_loader_smoke.cpp  droidmedia_smoke.cpp  hidl_camera_smoke.cpp  hidl_get_smoke.cpp  hidl_ping.cpp
hybris_generic/hardware/display/: BUILD.gn
hybris_generic/hardware/display/include/: display_common.h
hybris_generic/hardware/display/src/display_composer/: hybris_composer_vdi_impl.cpp  hybris_composer_vdi_impl.h  hybris_display.cpp  hybris_display.h  hybris_layer.cpp  hybris_layer.h
hybris_generic/hardware/display/src/display_gralloc/: hybris_buffer_vdi_impl.cpp  hybris_buffer_vdi_impl.h
hybris_generic/hardware/gpu/: BUILD.gn
hybris_generic/hardware/wlan/: BUILD.gn  wifi_ioctl.cpp
mt6789/: soc.gni
mt6789/hardware/: BUILD.gn
mt6789/hardware/display/: BUILD.gn
mt6789/hardware/display/include/: display_common.h  display_gralloc_private.h
mt6789/hardware/display/src/display_device/: display_composer_vdi_impl.cpp
mt6789/hardware/display/src/display_device/composer/: hdi_gfx_composition.cpp
mt6789/hardware/display/src/display_device/core/: hdi_device_interface.cpp  hdi_layer.cpp  hdi_layer.h
mt6789/hardware/display/src/display_device/drm/: drm_crtc.cpp  drm_crtc.h  drm_device.cpp  drm_display.h  drm_plane.cpp
mt6789/hardware/display/src/display_gfx/: display_gfx.c
mt6789/hardware/display/src/display_gralloc/: display_gralloc_gbm.c  hi_gbm.c  hi_gbm.cpp  hi_gbm_internal.h
mt6789/hardware/gpu/: BUILD.gn
mt6789/hardware/gpu/lib/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libglapi.so.0.0.0
mt6789/hardware/gpu/lib64/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libgbm.so.1.0.0  libglapi.so.0.0.0
mt6789/hardware/gpu/lib64/pkgconfig/: dri.pc  egl.pc  gbm.pc  glesv2.pc
mt6789/hardware/wifi/: BUILD.gn
qemu/: soc.gni
qemu/hardware/: BUILD.gn
qemu/hardware/display/: BUILD.gn
qemu/hardware/display/src/display_device/composer/: hdi_composer.cpp  hdi_gfx_composition.cpp  hdi_gfx_composition.h
qemu/hardware/display/src/display_device/core/: hdi_device_common.h  hdi_display.cpp  hdi_display.h  hdi_session.cpp  hdi_session.h
qemu/hardware/display/src/display_device/drm/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_device.cpp  drm_display.cpp  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp
qemu/hardware/display/src/display_gfx/: display_gfx.cpp
qemu/hardware/display/src/display_gralloc/: display_buffer_vdi_impl.cpp  display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.cpp  hi_gbm.c  hi_gbm.h
qemu/hardware/gpu/: BUILD.gn
qemu/hardware/gpu/lib/: libgbm.so.1.0.0
qemu/hardware/gpu/lib64/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
qemu/hardware/gpu/lib64/pkgconfig/: glesv1_cm.pc
qemu/hardware/wifi/: BUILD.gn
virt/: bundle.json  soc.gni
virt/hardware/: BUILD.gn
virt/hardware/display/: BUILD.gn
virt/hardware/display/src/display_device/: drm_connector.cpp  drm_display.cpp
virt/hardware/display/src/display_gralloc/: display_gralloc_gbm.cpp
virt/hardware/gpu/: BUILD.gn
virt/hardware/gpu/arm/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
virt/hardware/gpu/riscv64/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
x86_general/: bundle.json
x86_general/hardware/: BUILD.gn
x86_general/hardware/display/: BUILD.gn
x86_general/hardware/display/include/: display_common.h  display_gfx_private.h
x86_general/hardware/display/src/display_device/: display_composer_vdi_impl.cpp
x86_general/hardware/display/src/display_device/composer/: hdi_composer.cpp  hdi_gfx_composition.cpp  hdi_gfx_composition.h
x86_general/hardware/display/src/display_device/core/: hdi_device_common.h  hdi_device_interface.cpp  hdi_display.cpp  hdi_display.h  hdi_fd.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_session.cpp  hdi_session.h
x86_general/hardware/display/src/display_device/drm/: drm_connector.cpp  drm_connector.h  drm_device.cpp  drm_display.cpp  drm_display.h  drm_encoder.h  drm_plane.cpp  drm_vsync_worker.cpp  drm_vsync_worker.h
x86_general/hardware/display/src/display_gralloc/: allocator.cpp  allocator.h  allocator_manager.cpp  display_buffer_vdi_impl.cpp  drm_allocator.cpp
x86_general/hardware/gpu/: BUILD.gn
x86_general/hardware/gpu/include/: gbm.h
x86_general/hardware/gpu/lib64/: .gitattributes  BUILD.gn  PROVENANCE.md  libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0  oniro_build_x86_general.sh  radeon_icd.x86_64.json
