# Copyright (c) 2026 Oniro Authors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

# ─── Camera Host VDI (libhybris ICameraProvider wrapper) ────────────────────
#
# Loaded by the OHOS camera HDF host (libcamera_host_service_1.0.z.so) via
# HdfLoadVdi() from the entry in
# vendor/oniro/hybris_generic/hdf_config/uhdf/camera/hdi_impl/camera_host_config.hcs.
# See device/board/oniro/docs/hybris_generic/phase_n12_camera.md for the
# full design.

group("camera_host_model") {
  deps = [
    ":binder_smoke",
    ":camera_hidl_smoke",
    ":hidl_camera_smoke",
    ":hidl_get_smoke",
    ":hidl_ping",
    ":libcamera_host_vdi_impl",
  ]
}

# ─── N12.5.2b — pure-musl HIDL transport library ───────────────────────────
#
# HwParcel + HwBinderClient + HwServiceManager.  Refactored out of the
# N12.5.2 inline spike; intended to be reused by libcamera_host_vdi_impl
# in N12.5.3.  No bionic, no libhybris — talks the kernel binder ABI
# directly via the vendored uapi in src/hidl/hw_binder_abi.h.

hidl_transport_sources = [
  "src/hidl/hw_binder_client.cpp",
  "src/hidl/hw_camera_device.cpp",
  "src/hidl/hw_camera_provider.cpp",
  "src/hidl/hw_parcel.cpp",
  "src/hidl/hw_service_manager.cpp",
]

hidl_transport_include_dirs = [
  "include",
  "src",
]

# ─── N12.5.2 — pure-musl HIDL ping smoke ───────────────────────────────────
#
# Thin demo on top of the HwBinderClient/HwServiceManager modules: opens
# /dev/hwbinder, sends IBase::ping (HidlBase::TRANSACTION_ping, 0x0F504E47)
# to handle 0 with descriptor "android.hidl.base@1.0::IBase", expects
# EX_NONE.  Validates the full encoder + transact + reply parse pipeline.

ohos_executable("hidl_ping") {
  sources = [ "tools/hidl_ping.cpp" ] + hidl_transport_sources

  include_dirs = hidl_transport_include_dirs

  external_deps = [
    "hilog:libhilog",
  ]

  cflags_cc = [
    "-Wno-error=unused-function",
    "-Wno-error=unused-parameter",
    "-Wno-error=invalid-offsetof",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  part_name = "hybris_generic_soc"
}

# ─── N12.5.3a — IServiceManager::get() smoke ─────────────────────────────
#
# Resolves a HIDL service name via hwservicemanager (transaction code 1
# on handle 0), extracts the BINDER_TYPE_HANDLE from the reply, then
# IBase::pings the resolved handle to prove the round-trip.

ohos_executable("hidl_get_smoke") {
  sources = [ "tools/hidl_get_smoke.cpp" ] + hidl_transport_sources

  include_dirs = hidl_transport_include_dirs

  external_deps = [
    "hilog:libhilog",
  ]

  cflags_cc = [
    "-Wno-error=unused-function",
    "-Wno-error=unused-parameter",
    "-Wno-error=invalid-offsetof",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  part_name = "hybris_generic_soc"
}

# ─── N12.5.3b — ICameraProvider::getCameraIdList smoke ───────────────────
#
# Resolves the camera provider via hwservicemanager and calls
# getCameraIdList (transaction code 3) through the resolved handle.
# Expects 3 cameras on the X23.  Validates the full hidl_vec<hidl_string>
# reader path.

ohos_executable("hidl_camera_smoke") {
  sources = [ "tools/hidl_camera_smoke.cpp" ] + hidl_transport_sources

  include_dirs = hidl_transport_include_dirs

  external_deps = [
    "hilog:libhilog",
  ]

  cflags_cc = [
    "-Wno-error=unused-function",
    "-Wno-error=unused-parameter",
    "-Wno-error=invalid-offsetof",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  part_name = "hybris_generic_soc"
}

# ─── N12.5.1 — direct hwbinder smoke test ──────────────────────────────────
#
# Standalone executable that opens /dev/hwbinder + /dev/binder + /dev/vndbinder
# from an OHOS-side musl process and exercises BINDER_VERSION /
# BINDER_SET_MAX_THREADS / mmap.  Pre-flight check for the pure-musl HIDL
# transport path (Option ζ in phase_n12_camera.md § N12.5).  No libhybris
# dependency.

ohos_executable("binder_smoke") {
  sources = [ "tools/binder_smoke.cpp" ]

  include_dirs = [ "include" ]

  external_deps = [
    "hilog:libhilog",
  ]

  cflags_cc = [
    "-Wno-error=unused-function",
    "-Wno-error=unused-parameter",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  part_name = "hybris_generic_soc"
}

# ─── N12.5.0 — libhybris HIDL smoke test ───────────────────────────────────
#
# Standalone executable that hybris_dlopens Halium's libhidlbase and the
# camera-provider HIDL .so from an OHOS-side process.  Pre-flight check
# for the bionic-side shim that N12.5.1+ build on top of.  Run from device
# shell: `camera_hidl_smoke`.

ohos_executable("camera_hidl_smoke") {
  sources = [ "tools/camera_hidl_smoke.cpp" ]

  include_dirs = [
    "include",
    "//third_party/libhybris/hybris/include",
  ]

  deps = [
    "//third_party/libhybris/hybris/common:libhybris-common",
  ]

  external_deps = [
    "hilog:libhilog",
  ]

  cflags_cc = [
    "-Wno-error=unused-function",
    "-Wno-error=unused-parameter",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  part_name = "hybris_generic_soc"
}

ohos_shared_library("libcamera_host_vdi_impl") {
  sources = [
              "src/camera_device/hybris_camera_device_vdi_impl.cpp",
              "src/camera_device/hybris_stream_operator_vdi_impl.cpp",
              "src/camera_host/hybris_camera_ability.cpp",
              "src/camera_host/hybris_camera_host_vdi_impl.cpp",
            ] + hidl_transport_sources

  include_dirs = [
    "include",
    "src",                       # for hidl/hw_*.h
    "src/camera_host",
    "//drivers/peripheral/camera/vdi_base/interfaces",
    "//drivers/peripheral/camera/vdi_base/interfaces/v1_0",
    "//drivers/peripheral/camera/vdi_base/common/include",
    "//drivers/peripheral/camera/utils/event",
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/interface/camera/v1_0",
    "//drivers/interface/camera/metadata/include",
    "//drivers/hdf_core/interfaces/inner_api/host/uhdf",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_camera:libbuffer_producer_sequenceable_1.0",
    "drivers_interface_camera:metadata",
    "graphic_surface:buffer_handle",
    "graphic_surface:surface",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  cflags_cc = [
    "-Wno-error=unused-function",
    "-Wno-error=unused-parameter",
    "-Wno-error=#warnings",
  ]

  output_name = "libcamera_host_vdi_impl_1.0"
  install_enable = true
  install_images = [ chipset_base_dir ]
  innerapi_tags = [ "passthrough" ]
  part_name = "hybris_generic_soc"
}
