# Copyright (c) 2024 Oniro Project
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Replacement wifi_hal library for hybris_generic.
#
# Uses all upstream sources from drivers/peripheral/wlan/chip/wifi_hal/ except
# wifi_ioctl.cpp, which is replaced by our local version that stubs out the
# Huawei/HiSilicon vendor-specific ioctl (SIOCDEVPRIVATE+1) that crashes on
# MediaTek hardware.
#
# To use: set drivers_peripheral_wlan_feature_vendor = "hybris" in product config
# and add this target as a dependency.

import("//build/ohos.gni")

UPSTREAM_WIFI_HAL = "//drivers/peripheral/wlan/chip/wifi_hal"
UPSTREAM_HDI_SERVICE = "//drivers/peripheral/wlan/chip/hdi_service"

ohos_shared_library("wifi_hal_default") {
  include_dirs = [
    "${UPSTREAM_HDI_SERVICE}",
    "${UPSTREAM_WIFI_HAL}",
  ]

  sources = [
    # Upstream sources (unchanged)
    "${UPSTREAM_WIFI_HAL}/common.cpp",
    "${UPSTREAM_WIFI_HAL}/cpp_bindings.cpp",
    "${UPSTREAM_WIFI_HAL}/gscan.cpp",
    "${UPSTREAM_WIFI_HAL}/wifi_hal.cpp",
    "${UPSTREAM_WIFI_HAL}/wifi_logger.cpp",
    "${UPSTREAM_WIFI_HAL}/wifi_scan.cpp",

    # Our patched version (stubs vendor-specific ioctl for MediaTek)
    "wifi_ioctl.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_wlan:chip_idl_headers_2.0",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libnl:libnl_share",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "oniro_soc_products"
  part_name = "hybris_generic_soc"
}
