# Copyright (c) 2024 Institute of Software, Chinese Academy of Sciences. 
# Copyright (c) 2022 Diemit <598757652@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_prebuilt_shared_library("mesa_egl") {
    if (target_cpu == "arm") {
        source = "lib/libEGL.so.1.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libEGL.so.1.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libEGL.so",
        "libEGL.so.1",
        "libEGL_impl.so",
    ]
}

ohos_prebuilt_shared_library("mesa_gbm") {
    if (target_cpu == "arm") {
        source = "lib/libgbm.so.1.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libgbm.so.1.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libgbm.so.1",
        "libgbm.so",
    ]
}

ohos_prebuilt_shared_library("mesa_glapi") {
    if (target_cpu == "arm") {
        source = "lib/libglapi.so.0.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libglapi.so.0.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libglapi.so.0",
        "libglapi.so",
    ]
}

ohos_prebuilt_shared_library("mesa_glesv1") {
    if (target_cpu == "arm") {
        source = "lib/libGLESv1_CM.so.1.1.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libGLESv1_CM.so.1.1.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libGLESv1.so",
        "libGLESv1_impl.so",
    ]
}

ohos_prebuilt_shared_library("mesa_glesv2") {
    if (target_cpu == "arm") {
        source = "lib/libGLESv2.so.2.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libGLESv2.so.2.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libGLESv2.so",
        "libGLESv2_impl.so",
        "libGLESv3.so",
        "libGLESv3_impl.so",
        "libGLESv2.so.2",
    ]
}

ohos_prebuilt_shared_library("libgallium_dri") {
    if (target_cpu == "arm") {
        source = "lib/libgallium_dri.so"
    } else if (target_cpu == "arm64") {
        source = "lib64/libgallium_dri.so"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "swrast_dri.so",
        "kms_swrast_dri.so"
    ]
}

# ohos_prebuilt_executable("glmark2-es2-ohos") {
#     source = "test/glmark2-es2-ohos"
#     install_images = [ system_base_dir ]
#     part_name = "device_qemu"
#     install_enable = true
# }

group("mesa3d-lib") {
    deps = [
        ":mesa_egl",
        ":mesa_gbm",
        ":mesa_glapi",
        ":mesa_glesv1",
        ":mesa_glesv2",
        ":libgallium_dri",
        # ":glmark2-es2-ohos",
    ]
}
