import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_prebuilt_shared_library("mesa_egl") {
    if (target_cpu == "arm") {
        source = "lib/libEGL.so.1.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libEGL.so.1.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libEGL.so.1",
        "libEGL.so",
        "libEGL_impl.so",
    ]
}

ohos_prebuilt_shared_library("mesa_gbm") {
    if (target_cpu == "arm") {
        source = "lib/libgbm.so.1.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libgbm.so.1.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libgbm.so.1",
        "libgbm.so",
    ]
}

ohos_prebuilt_shared_library("mesa_glapi") {
    if (target_cpu == "arm") {
        source = "lib/libglapi.so.0.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libglapi.so.0.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libglapi.so.0",
        "libglapi.so",
    ]
}

ohos_prebuilt_shared_library("mesa_glesv1") {
    if (target_cpu == "arm") {
        source = "lib/libGLESv1_CM.so.1.1.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libGLESv1_CM.so.1.1.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libGLESv1_CM.so.1",
        "libGLESv1_CM.so",
        "libGLESv1.so",
        "libGLESv1_impl.so",
    ]
}

ohos_prebuilt_shared_library("mesa_glesv2") {
    if (target_cpu == "arm") {
        source = "lib/libGLESv2.so.2.0.0"
    } else if (target_cpu == "arm64") {
        source = "lib64/libGLESv2.so.2.0.0"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "libGLESv2.so.2",
        "libGLESv2.so",
        "libGLESv2_impl.so",
        "libGLESv3.so",
        "libGLESv3_impl.so",
    ]
}

ohos_prebuilt_shared_library("libgallium_dri") {
    if (target_cpu == "arm") {
        source = "lib/libgallium_dri.so"
    } else if (target_cpu == "arm64") {
        source = "lib64/libgallium_dri.so"
    }
    install_enable = true
    part_name = "device_qemu"
    install_images = [ chipset_base_dir ]
    relative_install_dir = "chipsetsdk"
    symlink_target_name = [
        "kms_swrast_dri.so",
        "swrast_dri.so"
    ]
}

group("mesa3d-lib") {
    deps = [
        ":mesa_egl",
        ":mesa_gbm",
        ":mesa_glapi",
        ":mesa_glesv1",
        ":mesa_glesv2",
        ":libgallium_dri",
    ]
}
